--- a/src/main/package.json
+++ b/src/main/package.json
@@ -17,6 +17,8 @@
     "chart.js": "2.7.1",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "react": "16.1.1",
     "react-chartjs-2": "2.6.4",
     "react-dom": "16.1.1",
@@ -26,29 +28,26 @@
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-hot-loader": "1.3.3",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.4.0",
     "gulp-rm": "^1.0.4",
     "gulp-sass": "^3.1.0",
-    "node-sass": "^4.7.2",
-    "webpack-stream": "^4.0.0",
-
-    "babel-core": "6.26.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-loader": "^7.1.2",
-
-
-    "webpack": "3.8.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "3.0.2",
-    "css-hot-loader": "1.3.3",
-    "file-loader": "1.1.5",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
+    "node-sass": "^4.7.2",
     "sass-loader": "6.0.6",
-    "style-loader": "0.19.0"
+    "style-loader": "0.19.0",
+    "webpack": "3.8.1",
+    "webpack-stream": "^4.0.0"
   }
 }
