--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
         </dependency>
 
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>json-osgi</artifactId>
-            <version>${project.version}</version>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
 
