--- a/src/main/package.json
+++ b/src/main/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "repository": {},
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "2.7.1",
     "font-awesome": "4.7.0",
